conv2d and maxpool2d layers implemented

--- a/dl_cw_1.ipynb
+++ b/dl_cw_1.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 59,
    "metadata": {
     "id": "b2FymI-duW5W",
     "tags": []
@@ -125,6 +125,7 @@
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "import math\n",
+    "import numpy as np\n",
     "\n",
     "class Conv2d(nn.Module):\n",
     "    def __init__(self,\n",
@@ -205,21 +206,32 @@
     "        # extract sliding local blocks from batched input tensor\n",
     "        # x_unf has shape [N, C*kernel_x*kernel_y, L], where L = # blocks\n",
     "        x_unf = F.unfold(input=x, kernel_size=self.kernel_size, padding=self.padding, stride=self.stride)\n",
+    "        # number of patches\n",
+    "        L = x_unf.size(-1)\n",
+    "\n",
     "        # apply convolution\n",
-    "        # out_unf = x_unf.transpose(1, 2).matmul(self.w.view(self.w.size(0), -1).t()).transpose(1, 2)\n",
-    "        out_unf = torch.empty(N, self.F, x_unf.size(-1))\n",
-    "        # loop over each batch\n",
-    "        for k in range(N):\n",
-    "            # loop over each sliding block\n",
-    "            for i in range(out_unf.size(-1)):\n",
-    "                block = x_unf[k,:,i].view(-1)\n",
-    "                # loop over each filter\n",
-    "                for j in range(self.F):\n",
-    "                    # element-wise multiplication \n",
-    "                    dotprod = block.t().matmul(self.w[j].view(-1))\n",
-    "                    if self.bias:\n",
-    "                        dotprod += self.b[j]\n",
-    "                    out_unf[k, j, i] = dotprod\n",
+    "        # out_unf.shape = (N, F, L)\n",
+    "        if self.bias:\n",
+    "            b = np.broadcast_to(self.b, shape=(N, L, self.F))\n",
+    "            b = torch.tensor(b)\n",
+    "            # b.shape = (N, L, F)\n",
+    "            out_unf = (x_unf.transpose(1, 2).matmul(self.w.view(self.w.size(0), -1).t()) + b).transpose(1, 2)\n",
+    "        else:\n",
+    "            out_unf = x_unf.transpose(1, 2).matmul(self.w.view(self.w.size(0), -1).t()).transpose(1, 2)\n",
+    "        \n",
+    "        # out_unf = torch.empty(N, self.F, L)\n",
+    "        # # loop over each batch\n",
+    "        # for k in range(N):\n",
+    "        #     # loop over each sliding block\n",
+    "        #     for i in range(L):\n",
+    "        #         block = x_unf[k,:,i].view(-1)\n",
+    "        #         # loop over each filter\n",
+    "        #         for j in range(self.F):\n",
+    "        #             # element-wise multiplication \n",
+    "        #             dotprod = block.t().matmul(self.w[j].view(-1))\n",
+    "        #             if self.bias:\n",
+    "        #                 dotprod += self.b[j]\n",
+    "        #             out_unf[k, j, i] = dotprod\n",
     "\n",
     "        # recombine array of sliding local blocks (after convolution) into a large containing tensor\n",
     "        out = out_unf.view(output_size)\n",
@@ -229,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +253,7 @@
        "Convolution Layer results: All test cases passed!"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "id": "ThrRIjf9uW5a",
     "tags": []
@@ -275,8 +287,15 @@
     "        # TODO: Define the parameters used in the forward pass                 #\n",
     "        # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "\n",
-    "        ...\n",
-    "        self.kernel_size = ...\n",
+    "        if isinstance(kernel_size, tuple):\n",
+    "           self.kernel_size = kernel_size\n",
+    "        elif isinstance(kernel_size, int):\n",
+    "            self.kernel_size = (kernel_size, kernel_size)\n",
+    "        \n",
+    "        self.stride = self.kernel_size\n",
+    "        # default 0 padding\n",
+    "        self.padding = (0, 0)\n",
+    "\n",
     "        # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "\n",
     "    def forward(self, x):\n",
@@ -288,21 +307,93 @@
     "        \"\"\"\n",
     "        # TODO: Implement the forward pass                                     #\n",
     "        # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
-    "        ...\n",
+    "        \n",
+    "        N, C, H, W = x.size()\n",
+    "        H_out = int((H + 2*self.padding[0] - (self.kernel_size[0] - 1) - 1)/self.stride[0] + 1)\n",
+    "        W_out = int((W + 2*self.padding[1] - (self.kernel_size[1] - 1) - 1)/self.stride[1] + 1)\n",
+    "        output_size = (N, C, H_out, W_out)\n",
+    "\n",
+    "        out = torch.empty(size=output_size)\n",
+    "        # apply max pooling to each channel separately \n",
+    "        for c in range(C):\n",
+    "            x_c = x[:, c, :, :]\n",
+    "            x_c = x_c.view(x_c.size(0), 1, x_c.size(1), x_c.size(2))\n",
+    "            x_c_unf = F.unfold(input=x_c, kernel_size=self.kernel_size, padding=self.padding, stride=self.stride)\n",
+    "\n",
+    "            # apply max pooling\n",
+    "            out_c_unf = torch.amax(x_c_unf, dim=1)\n",
+    "\n",
+    "            # convert to correct shape\n",
+    "            out_c = out_c_unf.view((N, H_out, W_out))\n",
+    "            out[:, c, :, :] = out_c\n",
+    "\n",
     "        # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "        return out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p><strong><pre style='display: inline;'>MaxPool Layer</pre></strong> passed!</p>"
+      ],
+      "text/plain": [
+       "MaxPool Layer results: All test cases passed!"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grader.check(\"MaxPool Layer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Implementation correct!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check Conv2d layer is functioning correctly\n",
+    "input = torch.rand(size=(32, 3, 28, 28))\n",
+    "\n",
+    "# our implementation\n",
+    "conv2d = Conv2d(3, 6, kernel_size=3)\n",
+    "w = conv2d.w\n",
+    "b = conv2d.b\n",
+    "maxpool2d = MaxPool2d(kernel_size=2)\n",
+    "# out = conv2d(input)\n",
+    "out = maxpool2d(conv2d(input))\n",
+    "\n",
+    "# pytorch implementation\n",
+    "torch_conv2d = nn.Conv2d(3, 6, kernel_size=3)\n",
+    "torch_conv2d.weight = nn.Parameter(w)\n",
+    "torch_conv2d.bias = nn.Parameter(b)\n",
+    "# torch_out = torch_conv2d(input)\n",
+    "torch_maxpool2d = nn.MaxPool2d(kernel_size=2)\n",
+    "torch_out = torch_maxpool2d(torch_conv2d(input))\n",
+    "\n",
+    "if torch.all(abs(out - torch_out) < 1e-6):\n",
+    "    print(\"Implementation correct!\")\n",
+    "else:\n",
+    "    print(\"Error!\")"
    ]
   },
   {
